# telomere

./: .dockerignore  .prettierignore  .yarnrc.yml  Dockerfile  Makefile  README.md  main.py  package.json  pyproject.toml
.github/workflows/: telomere.yml
src/controllers/: authentication_controller.py  efs_controller.py
src/models/: authentication_models.py  mongodb_models.py  mysql_models.py
src/routers/: __init__.py  efs.py  mongodb.py  mysql.py  public.py
src/services/: __init__.py
src/services/mongodb/: __init__.py  settings.py  utils.py
src/services/mysql/: __init__.py  settings.py  utils.py
src/utils/: decorators.py  exceptions.py  formatters.py  settings.py  timestamps.py
